@@ -1,3 +1,9 @@
+2004/09/25 17:07 (+0200) kaffeetisch
+
+	* xs/GtkTreeModel.xs: Remove the unused PUSH_INSTANCE macro.
+	Replace a strange unicode character in the POD with its ASCII
+	representation.  Fix a small copy-n-paste bug in the POD.
+
 2004/09/21 20:06 (-0400) muppetman
 
 	Fix issues related to utf-8 and locales.  Thanks to ender for
